src/testsuite/single/tests/compiler/fail/void_arg2.c
void foo(void, int bar);
